Updated API.
