# src/app/api/models.ts
@@ -2,5 +2,7 @@ export { AuthorBriefDto } from './models/author-brief-dto';
 export { AuthorDto } from './models/author-dto';
 export { PublicationBriefDto } from './models/publication-brief-dto';
 export { PublicationDto } from './models/publication-dto';
+export { PublisherBriefDto } from './models/publisher-brief-dto';
 export { PublisherDto } from './models/publisher-dto';
+export { ReviewBriefDto } from './models/review-brief-dto';
 export { ReviewDto } from './models/review-dto';
