# src/app/api/models/publisher-brief-dto.ts
@@ -1,0 +1,5 @@
+/* tslint:disable */
+export interface PublisherBriefDto {
+  id?: number;
+  name?: null | string;
+}
