# src/app/api/models/review-brief-dto.ts
@@ -1,0 +1,6 @@
+/* tslint:disable */
+export interface ReviewBriefDto {
+  id?: number;
+  isPositive?: boolean;
+  reviewerName?: null | string;
+}
